[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cryodecoder"
version= "0.0.2"
authors = [
    {name = "Paul Biggs"},
    {name = "Lisa Craw", email = "crawl@cardiff.ac.uk"},
    {name = "Jono Hawkins", email = "hawkinsj22@cardiff.ac.uk"},
    {name = "Mike Prior-Jones", email="prior-jonesm@cardiff.ac.uk"}   
]
description = "Module for decoding raw CHIL instrument data packets."
readme = "README.md"
requires-python = ">=3.8" 
dependencies = [
    # toml if < 3.11
    "toml; python_version<'3.11'",
    "pyserial",
    "pytest" 
]

[project.scripts]
# seriallogger = "cryodecoder.serial:serial_decoder_cli_entry"
# cryoeggsddecoder = "cryodecoder.file:read_cryoegg_sd_file_cli"